--- a/app.yml
+++ b/app.yml
@@ -1,53 +1,53 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: playground
+  name: wil-playground
   namespace: dev
   labels:
-    app: playground
+    app: wil-playground
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: playground
+      app: wil-playground
   template:
     metadata:
       labels:
-        app: playground
+        app: wil-playground
     spec:
       containers:
-      - name: playground
-        image: wil42/playground:v2
+      - name: wil-playground
+        image: wil42/playground:v1
         ports:
         - containerPort: 8888
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: playground
+  name: wil-playground
   namespace: dev
 
 spec:
   selector:
-    app: playground
+    app: wil-playground
   ports:
   - protocol: TCP
     port: 80
     targetPort: 8888
   type: ClusterIP
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: apps
-spec:
-  rules:
-  - http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: playground
-            port:
-              number: 8888
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: apps
+# spec:
+#   rules:
+#   - http:
+#       paths:
+#       - pathType: Prefix
+#         path: "/"
+#         backend:
+#           service:
+#             name: wil-playground
+#             port:
+#               number: 8888
