--- a/app.yml
+++ b/app.yml
@@ -35,19 +35,19 @@ spec:
     port: 8888
     targetPort: 8888
   type: ClusterIP
-
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: apps
-# spec:
-#   rules:
-#   - http:
-#       paths:
-#       - pathType: Prefix
-#         path: "/"
-#         backend:
-#           service:
-#             name: wil-playground
-#             port:
-#               number: 8888
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: apps
+spec:
+  rules:
+  - http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: wil-playground
+            port:
+              number: 8888
