--- a/app.yml
+++ b/app.yml
@@ -34,20 +34,4 @@ spec:
   - protocol: TCP
     port: 8888
     targetPort: 8888
-  type: ClusterIP
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: apps
-spec:
-  rules:
-  - http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: wil-playground
-            port:
-              number: 8888
+  type: LoadBalancer
